Bug 324108 - Changing current layer became really slow recently
Summary: Changing current layer became really slow recently
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-27 09:58 UTC by Dmitry Kazakov
Modified: 2013-08-27 10:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2013-08-27 09:58:37 UTC
1) Create an image, say, 5000x5000px
2) Add several layers
3) Switch current layer

Every switching takes several seconds on Core2Duo CPU
Comment 1 Halla Rempt 2013-08-27 10:06:45 UTC
Hm... On my desktop it still takes only a second for a 10k x 10k image, but that's pretty slow already. I don't think a whole lot changed there recently, though. Maybe git bisect can help?
Comment 2 Dmitry Kazakov 2013-08-27 10:33:08 UTC
Git commit 14e6bf63843388d3ecbc15794d2f829316a5e18b by Dmitry Kazakov.
Committed on 27/08/2013 at 10:32.
Pushed by dkazakov into branch 'master'.

No need to resort the whole KisCategorizedListView on every data change

M  +8    -1    krita/ui/widgets/kis_categorized_list_view.cpp
M  +4    -1    krita/ui/widgets/kis_categorized_list_view.h

http://commits.kde.org/calligra/14e6bf63843388d3ecbc15794d2f829316a5e18b