No need to resort the whole KisCategorizedListView on every data change

BUG:324108